tests/errors/semantics/cannot_item_access_ptr_to_nonarray.odl
main :: () -> void  {
    x := 5;
    xp := &x;
    xp[4];
};